feat: rename llm provider to llm connection
